[package]
name = "trace_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix ="0.26.2"
anyhow="*"
procmaps = "*"
serde_json = "1"
serde = "1"
clap = {version="4", features=["derive"]}
r2pipe = "0.7.0"
