[package]
name = "trace_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix ="*"
anyhow="*"
clap = {version="*", features=["derive", "env"]}
r2pipe = "*"
redis = "*"
log = "*"
env_logger = "*"
bincode = "*"
serde_json = "1"
serde = {version="1", features=["derive"]}
once_cell = "1.17.1"
nom = "7.1.3"
